2011-04-26  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Updated the libtcl library to match dll.

        * gemtcl.cc: Write output from the source init.tcl in the
        tcl window.

2011-04-24  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * configure.in: Release windows version 0.1.34

        * Lots of changes to fix windows compilation.

        * gem-button-box.gob : Fixed problem with spin-button set.

2009-05-26  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* gem-button-box.gob : Solved problem of displaying names
	for GtkImage.

	* gem-button-box.gob : Solved problem for displaying name
	label for GtkFileChooserButton.

2009-05-19  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* gem-button-box.gob : Made choosing the name of a widget in
	a menu copy the name to the clip board.

2009-03-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* configure.in : Released Windows bug fix version 0.1.31

	* server-examples/microscope-server.c : Added searching for
	ghostscript in the systems path.

	* gemtcl.nsi.in : Added tm.tcl and clock.tcl that are part of
	tcl8.5 standard library.

	* gemtcl.nsi.in : Added some missing example files and doc directory
	for windows.

	* SConstruct : Updated glade to latest svn version.

2009-02-11  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* SConstruct : Replaced glade version to 3.5.7 for windows
	installer.

	* configure.in : Bumped version to 0.1.31

2009-01-29  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* gemtcl.cc : Moved lib files of exe from lib/ to lib/tcl .

	* gem-button-box-editor.gob : Added a [Launch glade] button next
	to the glade file name.

	* configure.in : Bumped version to 0.1.30

2008-12-30  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* configure.in : Bumped version to 0.1.29 .

	* gemtcl.cc : Fixed mess when closing button boxes.

	* gemtcl.cc : Fixed non-initiation of connect variable in
	xmlrpc client.

2008-12-29  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* configure.in : Bumped version to 0.1.28 .
