@@ -1,3 +1,10 @@
+2011-07-24  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * configure.in: Release windows version 0.1.36
+
+        * gemtcl.nsi.in: Added jpeg and gif support. Slight rewrite of
+        the gdk-pixbuf-query-loaders.exe generation.
+
 2011-04-26  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
         * Updated the libtcl library to match dll.
